# synapse-dashboard

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: __init__.py  app.py  application.py  context.py  data_loader.py  filters.py  state.py
dashboard/app_pages/: __init__.py  digital_investment.py  executive_summary.py  hospital_explorer.py  intervention_priority.py  methodology.py  operational_impact.py
dashboard/components/: __init__.py  chart_theme.py  charts.py  charts_digital.py  charts_executive.py  charts_hospital.py  charts_methodology.py  charts_operational.py  charts_priority.py  common.py  healthops_ui.py  style.py  tables.py
dashboard/styles/: main.css
dashboard/utils/: __init__.py  export.py  formatting.py  terminology.py
docs/: contrast_pairs.json  contrast_validation.json  dashboard_structure.md  deep-research-report.md  design_system.md  design_system_validation.json  design_tokens.json  techstack.md  visual_audit_baseline.json  visual_audit_final.json  visual_audit_report.json
synapse_artifacts/: adjusted_association_hc3.csv  adjusted_model_summary.csv  analysis_config.json  data_quality_audit.csv  executive_findings.csv  hospital_features_scored.csv  hospital_priority.csv  intervention_recommendations.csv  model_metrics.json  outcome_association.csv  peer_benchmarks.csv  root_cause_scores.csv
tests/: __init__.py  conftest.py  test_app_smoke.py  test_charts.py  test_data_contract.py  test_export.py  test_filters.py  test_formatting.py  test_peer_benchmarks.py
