[project]
name = "synapse-dashboard"
version = "0.1.0"
description = "SYNAPSE HealthOps smart-hospital analytics dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "streamlit>=1.59.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.uv]
package = false
default-groups = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

